--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -1,8 +1,6 @@
 @import './_fonts.styl'
 @import './_global.styl'
-
+@import './blocks/_navigation.styl'
 @import './_howtowork.styl'
 @import './_documents.styl'
-
-
 @import './_footer.styl'
