add global button

--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -17,3 +17,21 @@ html
   margin 0 auto
   padding-left 0.6rem
   padding-right 0.6rem
+
+.button
+  font-family: 'Open Sans'
+  font-weight: 700
+  font-size: 1.6rem
+  background-color: #60C3FE
+  padding 2rem 4.5rem
+  border none
+  border-radius 30px
+  color white
+  cursor pointer
+  transition: .3s
+  user-select none
+  &_mini
+    font-size: 1.3rem
+    padding: 1.4rem 3.4rem
+  &:hover
+    background-color: #37ADF4
