add header navigation block

--- a/src/pug/blocks/_navigation.pug
+++ b/src/pug/blocks/_navigation.pug
@@ -1,4 +1,12 @@
 .navigation
-  .navigation__logo
-  .menu
-  .navigation__callback
+  .navigation__wrapper
+    .navigation__logo
+      img(src="/images/logo.png")
+    nav.menu
+      a.menu__link(href="#") Мы это
+      a.menu__link(href="#") Продукты
+      a.menu__link(href="#") Как это работает
+      a.menu__link(href="#") География
+      a.menu__link(href="#") Документы
+    .navigation__callback
+      button.button.button_mini Оставить заявку
