connect header blocks

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -1,6 +1,7 @@
 @import './_fonts.styl'
 @import './_global.styl'
 @import './blocks/_navigation.styl'
+@import './blocks/_header.styl'
 @import './_howtowork.styl'
 @import './_documents.styl'
 @import './_footer.styl'
