--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,6 +2,7 @@ extends layouts/_main.pug
 
 block content
   include blocks/_navigation.pug
+  include blocks/_header.pug
   include blocks/_howtowork.pug
   include blocks/_documents.pug
   include blocks/_footer.pug
