add stylus and pug

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -1,6 +1,8 @@
 @import './_fonts.styl'
 @import './_global.styl'
 
+@import './_howtowork.styl'
 @import './_documents.styl'
+
 
 @import './_footer.styl'
