add quotations block

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,6 +3,7 @@ extends layouts/_main.pug
 block content
   include blocks/_navigation.pug
   include blocks/_header.pug
+  include blocks/_quotations.pug
   include blocks/_howtowork.pug
   include blocks/_documents.pug
   include blocks/_footer.pug
