--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -2,6 +2,7 @@
 @import './_global.styl'
 @import './blocks/_navigation.styl'
 @import './blocks/_header.styl'
+@import './blocks/_quotations.styl'
 @import './_howtowork.styl'
 @import './_documents.styl'
 @import './_footer.styl'
