--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -15,8 +15,8 @@ html
 .g-wrapper
   max-width: 120rem
   margin 0 auto
-  padding-left 0.6rem
-  padding-right 0.6rem
+  padding-left 3rem
+  padding-right 3rem
 
 .button
   font-family: 'Open Sans'
@@ -35,3 +35,32 @@ html
     padding: 1.4rem 3.4rem
   &:hover
     background-color: #37ADF4
+
+@media (max-width: 1600px)
+  html
+    font-size: 9px
+
+@media (max-width: 1370px)
+  html
+    font-size: 8px
+
+@media (max-width: 1024px)
+  html
+    font-size: 10px
+  .g-wrapper
+    max-width: 76.8rem
+    padding-left 2.4rem
+    padding-right 2.4rem
+
+@media (max-width: 767px)
+  html
+    font-size: 9px
+
+@media (max-width: 566px)
+  html
+    font-size: 10px
+  .g-wrapper
+    max-width: 42rem
+    padding-left 1.6rem
+    padding-right 1.6rem
+
