--- a/src/stylus/blocks/_navigation.styl
+++ b/src/stylus/blocks/_navigation.styl
@@ -5,6 +5,7 @@
   width 100%
   z-index: 10000
   // background-color: black // DELETE
+  padding-top 2.2rem
   &__wrapper
     display flex
     justify-content: space-between
