--- a/src/pug/blocks/_quotations.pug
+++ b/src/pug/blocks/_quotations.pug
@@ -1,8 +1,38 @@
 .quotations
   .g-wrapper
     .quotations__top
-      .quotations__logo
+      img.quotations__logo(src="/images/spimex.png")
       .quotations__title Котировки
       .quotations__buttons
         .quotations__button
+          .quotations__circle
+            include ../../images/arrow-left.svg
         .quotations__button
+          .quotations__circle
+            include ../../images/arrow-right.svg
+    .quotations__blocks
+      .quotations__slider
+        .quotations__block
+          .quotations__label Регулятор-92
+          .quotations__index Индекс:#[span.quotations__index_regular 48 182]#[span.quotations__index_red - 0.67%]
+          .quotations__time
+            include ../../images/clock.svg
+            | 18:43, 21.08.17
+        .quotations__block
+          .quotations__label Премиум-95
+          .quotations__index Индекс:#[span.quotations__index_regular 45 182]#[span.quotations__index_red - 0.05%]
+          .quotations__time
+            include ../../images/clock.svg
+            | 18:43, 21.08.17
+        .quotations__block
+          .quotations__label ДТ Летнее
+          .quotations__index Индекс:#[span.quotations__index_regular 43 182]#[span.quotations__index_green + 0.22%]
+          .quotations__time
+            include ../../images/clock.svg
+            | 18:43, 21.08.17
+        .quotations__block
+          .quotations__label ДТ Зимнее
+          .quotations__index Индекс:#[span.quotations__index_regular 44 182]#[span.quotations__index_green + 5.52%]
+          .quotations__time
+            include ../../images/clock.svg
+            | 18:43, 21.08.17
