--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -51,6 +51,12 @@ html
     max-width: 76.8rem
     padding-left 2.4rem
     padding-right 2.4rem
+  .button
+    font-size: 1.4rem
+    padding 1.6rem 3.2rem
+    &_mini
+      font-size: 1.2rem
+      padding 1.2rem 2.6rem
 
 @media (max-width: 767px)
   html
@@ -63,4 +69,10 @@ html
     max-width: 42rem
     padding-left 1.6rem
     padding-right 1.6rem
+  .button
+    font-size: 1.2rem
+    padding 1.2rem 2.2rem
+    &_mini
+      font-size: 1rem
+      padding 1rem 2.2rem
 
