--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -3,6 +3,6 @@
 @import './blocks/_navigation.styl'
 @import './blocks/_header.styl'
 @import './blocks/_quotations.styl'
-@import './_howtowork.styl'
-@import './_documents.styl'
-@import './_footer.styl'
+@import './blocks/_howtowork.styl'
+@import './blocks/_documents.styl'
+@import './blocks/_footer.styl'
