--- a/src/stylus/blocks/_header.styl
+++ b/src/stylus/blocks/_header.styl
@@ -46,3 +46,51 @@
     font-weight: 700
     color white
     margin-right 7.5rem
+
+@media (max-width: 1024px)
+  .header
+    &__video
+      height 46.4rem
+    &__title
+      font-size: 3rem
+      margin-bottom 2.2rem
+    &__text
+      font-size: 1.4rem
+      line-height: 2.2rem
+    &__phone
+      font-size: 1.8rem
+      margin-right 5rem
+    &__contact
+      padding-top 2.8rem
+    &__icon
+      & svg
+        height 1.6rem
+
+@media (max-width: 566px)
+  .header
+    &__phoneblock
+      display flex
+      align-items: center
+      justify-content: center
+      margin-bottom 1.5rem
+    &__content
+      padding 0 1.6rem
+    &__video
+      height 47.6rem
+    &__title
+      font-size: 2.4rem
+      margin-bottom 2.6rem
+    &__text
+      font-size: 1.2rem
+      line-height: 2.1rem
+    &__phone
+      font-size: 1.6rem
+      margin-right 0
+      margin-bottom 0
+    &__contact
+      display block
+      text-align center
+      padding-top 2.8rem
+    &__icon
+      & svg
+        height 1.2rem
