--- a/src/pug/blocks/_header.pug
+++ b/src/pug/blocks/_header.pug
@@ -4,7 +4,8 @@ header.header
     .header__title #[span.header__title_blue НГБ] - гарант стабильных поставок
     .header__text Ваш надежный поставщик нефтепродуктов и природного газа. <br /> Один из крупнейших брокеров в России
     .header__contact
-      .header__icon
-        include ../../images/phone.svg
-      a.header__phone(href="tel:84959891212") 8 (495) 989-12-12
+      span.header__phoneblock
+        span.header__icon
+          include ../../images/phone.svg
+        a.header__phone(href="tel:84959891212") 8 (495) 989-12-12
       button.button Связаться с нами
