footer media 1023px

--- a/src/pug/blocks/_footer.pug
+++ b/src/pug/blocks/_footer.pug
@@ -18,7 +18,7 @@ footer.footer
             label.footer__field * Ваш телефон:
             input.footer__input(type="tel" required name="phone" placeholder="+7 (999) 999-99-99")
           .footer__item
-            label.footer__field Ваш вопрос?
+            label.footer__field &nbsp;&nbsp; Ваш вопрос?
             textarea.footer__textarea(type="text" placeholder="Что вас интересует?")
           button.button.footer__submit Отправить
   .g-wrapper
