--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -88,3 +88,40 @@
       color white
       text-align: right
       margin-bottom 1.6rem
+
+@media (max-width: 1024px)
+  .footer
+    padding 8.8rem 0 3rem 0
+    &__title
+      font-size 3rem
+      margin-bottom 3.2rem
+    &__subtitle
+      font-size 1.4rem
+      margin-bottom 0.4rem
+    &__text
+      font-size: 2rem
+    &__field
+      font-size 1.4rem
+      margin-bottom 1.4rem
+    &__question
+      padding-left 2rem
+    &__input
+      font-size 1.4rem
+      padding 1.1rem 2.9rem 1.1rem 2.9rem
+      width 34rem
+    &__item
+      margin-bottom 2.4rem
+      &:nth-child(3)
+        margin-bottom 4rem
+    &__textarea
+      font-size 1.4rem
+      padding 1.1rem 2.9rem 1.1rem 2.9rem
+      width 34rem
+      height 10.8rem
+    &__content
+      margin-bottom 14.6rem
+    &__pol
+      font-size 1.2rem
+
+
+//@media (max-width: 566px)
