--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -62,6 +62,10 @@ html
   html
     font-size: 9px
 
+@media (max-width: 675px)
+  html
+    font-size: 8px
+
 @media (max-width: 566px)
   html
     font-size: 10px
