--- a/src/pug/blocks/_quotations.pug
+++ b/src/pug/blocks/_quotations.pug
@@ -13,26 +13,30 @@
     .quotations__blocks
       .quotations__slider
         .quotations__block
-          .quotations__label Регулятор-92
-          .quotations__index Индекс:#[span.quotations__index_regular 48 182]#[span.quotations__index_red - 0.67%]
-          .quotations__time
-            include ../../images/clock.svg
-            | 18:43, 21.08.17
+          span
+            .quotations__label Регулятор-92
+            .quotations__index Индекс:#[span.quotations__index_regular 48 182]#[span.quotations__index_red - 0.67%]
+            .quotations__time
+              include ../../images/clock.svg
+              | 18:43, 21.08.17
         .quotations__block
-          .quotations__label Премиум-95
-          .quotations__index Индекс:#[span.quotations__index_regular 45 182]#[span.quotations__index_red - 0.05%]
-          .quotations__time
-            include ../../images/clock.svg
-            | 18:43, 21.08.17
+          span
+            .quotations__label Премиум-95
+            .quotations__index Индекс:#[span.quotations__index_regular 45 182]#[span.quotations__index_red - 0.05%]
+            .quotations__time
+              include ../../images/clock.svg
+              | 18:43, 21.08.17
         .quotations__block
-          .quotations__label ДТ Летнее
-          .quotations__index Индекс:#[span.quotations__index_regular 43 182]#[span.quotations__index_green + 0.22%]
-          .quotations__time
-            include ../../images/clock.svg
-            | 18:43, 21.08.17
+          span
+            .quotations__label ДТ Летнее
+            .quotations__index Индекс:#[span.quotations__index_regular 43 182]#[span.quotations__index_green + 0.22%]
+            .quotations__time
+              include ../../images/clock.svg
+              | 18:43, 21.08.17
         .quotations__block
-          .quotations__label ДТ Зимнее
-          .quotations__index Индекс:#[span.quotations__index_regular 44 182]#[span.quotations__index_green + 5.52%]
-          .quotations__time
-            include ../../images/clock.svg
-            | 18:43, 21.08.17
+          span
+            .quotations__label ДТ Зимнее
+            .quotations__index Индекс:#[span.quotations__index_regular 44 182]#[span.quotations__index_green + 5.52%]
+            .quotations__time
+              include ../../images/clock.svg
+              | 18:43, 21.08.17
