medias 566px footer

--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -123,5 +123,11 @@
     &__pol
       font-size 1.2rem
 
-
-//@media (max-width: 566px)
+@media (max-width: 566px)
+  .footer
+    padding 3.8rem 0 3rem 0
+    &__title
+      font-size 2.4rem
+      margin-bottom 3.2rem
+    &__content
+      display: block
