--- a/src/stylus/blocks/_navigation.styl
+++ b/src/stylus/blocks/_navigation.styl
@@ -6,6 +6,7 @@
   z-index: 10000
   // background-color: black // DELETE
   padding-top 2.2rem
+  transition .5s
   &__wrapper
     display flex
     justify-content: space-between
@@ -28,3 +29,6 @@
   &__link
     font-size:  1.6rem
     color white
+    transition: .3s
+    &:hover
+      color: #60C3FE
