add products blocks

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,9 +4,8 @@ block content
   include blocks/_navigation.pug
   include blocks/_header.pug
   include blocks/_quotations.pug
+  include blocks/_products.pug
   include blocks/__weare.pug
   include blocks/_howtowork.pug
   include blocks/_documents.pug
   include blocks/_footer.pug
-
-
