--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -7,3 +7,4 @@
 @import './blocks/_documents.styl'
 @import './blocks/_footer.styl'
 @import './blocks/__weare.styl'
+@import './blocks/_products.styl'
