add products blocks

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -6,3 +6,4 @@
 @import './blocks/_howtowork.styl'
 @import './blocks/_documents.styl'
 @import './blocks/_footer.styl'
+@import './blocks/_products.styl'
