--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,4 +7,4 @@ block content
   include blocks/_howtowork.pug
   include blocks/_documents.pug
   include blocks/_footer.pug
-
+  include blocks/_products.pug
