--- a/src/stylus/blocks/_documents.styl
+++ b/src/stylus/blocks/_documents.styl
@@ -52,4 +52,67 @@
     max-width: 502px
     max-height: 494px
     width 100%
-    transform: translateX(13rem);
+    object-fit: contain
+    transform: translate(13rem,4rem);
+
+@media (max-width: 1024px)
+  .documents
+    padding-top: 6rem;
+    &__header
+      font-size 3rem
+      margin-bottom 4.2rem
+    &__list
+      flex-basis 70%
+    &__subtitle
+      font-size 2rem
+    &__item
+      font-size 1.4rem
+      line-height 2rem
+      padding-left: 2.8rem;
+      margin-bottom 2.2rem
+      &:before
+        width 18px
+        height: 18px
+        top 2px
+    &__image
+      flex-basis 30%
+    &__img
+      width: 112%;
+      transform: translate(7rem,5rem);
+
+@media (max-width: 920px)
+  .documents
+    &__img
+        width: 100%;
+        transform: translate(4rem,5rem);
+@media (max-width: 816px)
+  .documents
+    &__img
+        transform: translate(2rem,5rem);
+@media (max-width: 700px)
+  .documents
+    &__img
+        transform: translate(2rem,10rem);
+@media (max-width: 566px)
+  .documents
+    padding-top 4rem
+    &__header
+      font-size 2.4rem
+      margin-bottom 2.2rem
+    &__subtitle
+      font-size 1.8rem
+      line-height 2.6rem
+      margin-bottom 2.6rem
+    &__item
+      font-size 1.2rem
+      line-height 1.9rem
+      margin-bottom 1.8rem
+      &:before
+        width 16px
+        height: 16px
+        top 2px
+    &__list
+      flex-basis: 100%
+      padding-bottom 0
+    &__image
+      display none
