refactoring block howtowork

--- a/src/stylus/blocks/_howtowork.styl
+++ b/src/stylus/blocks/_howtowork.styl
@@ -13,6 +13,7 @@
     display flex
     justify-content: space-between
     align-items: flex-start
+    margin-bottom 12rem
   &__etaps
     display flex
     flex-direction: column
@@ -78,7 +79,5 @@
       font-weight: 700
       font-size 3rem
 
-.howtowork  button
-  margin-top -3rem
-  margin-bottom 12rem
-
+.howtowork__etaps button
+  margin-top 4rem
