--- a/src/pug/blocks/_howtowork.pug
+++ b/src/pug/blocks/_howtowork.pug
@@ -16,7 +16,6 @@
           .howtowork__number 03.
           .howtowork__subtitle Шаг третий
           .howtowork__text Мы оформляем документы и производим контроль доставки, решая все возникающие вопросы.  От Вас необходимо своевременное выполнение обязательства по оплате и приемке продукции
-
     .howtowork__footer
       .howtowork__tag <span>НефтеГазБрокер</span> гарантирует:
       .howtowork__variants
@@ -28,5 +27,5 @@
           .howtowork__garant <span>Г</span>ибкость цен
         .howtowork__element
           img.howtowork__image(src='../images/howtowork-3.svg')
-          .howtowork__garant <span>Б</span>езупречное качество </br> продукта
+          .howtowork__garant <span>Б</span>езупречное качество <br>продукта
 
