fixs footer for iphone 5

--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -168,6 +168,14 @@
 
 @media (max-width: 418px)
   .footer__field
+    padding-left 5rem
+
+@media (max-width: 378px)
+  .footer__field
     padding-left 2rem
+
+@media (max-width: 378px)
+  .footer__field
+    padding-left 1rem
 
 
