fix tolik errors

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -3,8 +3,8 @@
 @import './blocks/_navigation.styl'
 @import './blocks/_header.styl'
 @import './blocks/_quotations.styl'
+@import './blocks/_weare.styl'
+@import './blocks/_products.styl'
 @import './blocks/_howtowork.styl'
 @import './blocks/_documents.styl'
 @import './blocks/_footer.styl'
-@import './blocks/__weare.styl'
-@import './blocks/_products.styl'
