class for call modal windows

--- a/src/pug/blocks/_header.pug
+++ b/src/pug/blocks/_header.pug
@@ -8,4 +8,4 @@ header.header
         span.header__icon
           include ../../images/phone.svg
         a.header__phone(href="tel:84959891212") 8 (495) 989-12-12
-      button.button Связаться с нами
+      button.button.callback Связаться с нами
