--- a/src/pug/blocks/_howtowork.pug
+++ b/src/pug/blocks/_howtowork.pug
@@ -7,7 +7,7 @@
           .howtowork__number 01.
           .howtowork__subtitle Шаг первый
           .howtowork__text Вы направляете нам заявку любым удобным способом – по телефону, официальным письмом, по электронной почте
-          button.button.button__mini Оставить заявку
+          button.button.button__mini.callback Оставить заявку
         .howtowork__etaps
           .howtowork__number 02.
           .howtowork__subtitle Шаг второй
