--- a/src/pug/blocks/_navigation.pug
+++ b/src/pug/blocks/_navigation.pug
@@ -9,5 +9,5 @@
       a.menu__link(href="#") География
       a.menu__link(href="#") Документы
     .navigation__callback
-      button.button.button_mini Оставить заявку
+      button.button.button_mini.callback Оставить заявку
 
