--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,5 +8,6 @@ block content
   include blocks/_weare.pug
   include blocks/_products.pug
   include blocks/_howtowork.pug
+  include blocks/_geography.pug
   include blocks/_documents.pug
   include blocks/_footer.pug
