--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -6,6 +6,7 @@
 @import './blocks/_weare.styl'
 @import './blocks/_products.styl'
 @import './blocks/_howtowork.styl'
+@import './blocks/_geography.styl'
 @import './blocks/_documents.styl'
 @import './blocks/_footer.styl'
 @import './blocks/_products.styl'
