--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -9,3 +9,4 @@
 @import './blocks/_documents.styl'
 @import './blocks/_footer.styl'
 @import './blocks/_products.styl'
+@import './blocks/_callback.styl'
