--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -5,8 +5,10 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="/css/style.css")
+    link(rel="stylesheet", href="/vendor/tingle.css")
     title
   body
     #wrapper
       block content
+    script(src="/vendor/tingle.min.js")
     script(src="/js/main.js")
