add mobile hamburger

--- a/src/pug/blocks/_header.pug
+++ b/src/pug/blocks/_header.pug
@@ -1,6 +1,8 @@
 header.header
   video.header__video(src="/images/header-video.mp4" autoplay loop)
   .header__content
+    .mobile__hamburger
+      img.mobile__hamb(src='/images/hamburger.png')
     .header__title #[span.header__title_blue НГБ] - гарант стабильных поставок
     .header__text Ваш надежный поставщик нефтепродуктов и природного газа. <br /> Один из крупнейших брокеров в России
     .header__contact
