--- a/src/stylus/blocks/_geography.styl
+++ b/src/stylus/blocks/_geography.styl
@@ -2,6 +2,8 @@
   font-family: 'Open Sans'
   padding-top 10rem
   padding-bottom 8.2rem
+  padding-left 0.6rem
+  padding-right 0.6rem
   max-width: 130rem
   margin 0 auto
   &__header
@@ -85,3 +87,43 @@
     align-items: flex-start
     & svg
       width 100.5rem
+
+@media (max-width: 1024px)
+  .geography
+    padding-top 9rem
+    padding-bottom 6rem
+    max-width: 80rem
+    &__header
+      font-size: 3rem
+      margin-bottom 0
+    &__item
+      margin-bottom 2.5rem
+    &__triangle svg
+      margin-right 1.7rem
+    &__text
+      font-size: 1.4rem
+      white-space nowrap
+    &__blobs
+      width 2.1rem
+      height 2.5rem
+    &__blob
+      width: 1.75rem
+      height: 2.63rem
+      margin-right 1.9rem
+    &__right
+      align-self: flex-end
+      & svg
+        max-width 59rem
+
+@media (max-width: 710px)
+  .geography
+    padding-left 1rem
+    padding-right 1rem
+    padding-bottom 4rem
+    &__header
+      font-size: 2.4rem
+      margin-bottom 1.5rem
+    &__left
+      display none
+    &__right svg
+      max-width: 100%
