--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,6 +1,7 @@
 extends layouts/_main.pug
 
 block content
+  include blocks/_mob-menu.pug
   include blocks/_navigation.pug
   include blocks/_header.pug
   include blocks/_quotations.pug
