mob menu styles

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -10,3 +10,4 @@
 @import './blocks/_footer.styl'
 @import './blocks/_products.styl'
 @import './blocks/_callback.styl'
+@import './blocks/_mob-menu.styl'
