--- a/src/pug/blocks/_mob-menu.pug
+++ b/src/pug/blocks/_mob-menu.pug
@@ -1,11 +1,11 @@
 .mob-menu
   .mob-menu__top
-    button.button.button__mini.callback Оставить заявку
+    a.button.button__mini.button__scroll(href="#footer") Оставить заявку
     .mob-menu__close
       include ../../images/cross.svg
   .mob-menu__menu
-    a.mob-menu__item(href="#") Мы это
-    a.mob-menu__item(href="#") Продукты
-    a.mob-menu__item(href="#") Как это работает
-    a.mob-menu__item(href="#") География
-    a.mob-menu__item(href="#") Документы
+    a.mob-menu__item(href="#weare") Мы это
+    a.mob-menu__item(href="#products") Продукты
+    a.mob-menu__item(href="#howtowork") Как это работает
+    a.mob-menu__item(href="#geography") География
+    a.mob-menu__item(href="#documents") Документы
