--- a/src/pug/blocks/_navigation.pug
+++ b/src/pug/blocks/_navigation.pug
@@ -1,13 +1,13 @@
 .navigation
   .navigation__wrapper
-    .navigation__logo
+    a.navigation__logo(href="#")
       img(src="/images/logo.png")
     nav.menu
-      a.menu__link(href="#") Мы это
-      a.menu__link(href="#") Продукты
-      a.menu__link(href="#") Как это работает
-      a.menu__link(href="#") География
-      a.menu__link(href="#") Документы
+      a.menu__link(href="#weare") Мы это
+      a.menu__link(href="#products") Продукты
+      a.menu__link(href="#howtowork") Как это работает
+      a.menu__link(href="#geography") География
+      a.menu__link(href="#documents") Документы
     .navigation__callback
       button.button.button_mini.callback Оставить заявку
 
