scroll to library

--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -11,4 +11,5 @@ html(lang="ru")
     #wrapper
       block content
     script(src="/vendor/tingle.min.js")
+    script(src="/vendor/smooth-scroll.polyfills.min.js")
     script(src="/js/main.js")
