--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -6,7 +6,7 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="/css/style.css")
     link(rel="stylesheet", href="/vendor/tingle.css")
-    title
+    title НГБ
   body
     #wrapper
       block content
