--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,7 @@ block content
   include blocks/_header.pug
   include blocks/_quotations.pug
   include blocks/_weare.pug
+  include blocks/_moments.pug
   include blocks/_products.pug
   include blocks/_howtowork.pug
   include blocks/_geography.pug
