--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -4,6 +4,7 @@
 @import './blocks/_header.styl'
 @import './blocks/_quotations.styl'
 @import './blocks/_weare.styl'
+@import './blocks/_moments.styl'
 @import './blocks/_products.styl'
 @import './blocks/_howtowork.styl'
 @import './blocks/_geography.styl'
