fixs mobile menu

--- a/src/stylus/blocks/_mob-menu.styl
+++ b/src/stylus/blocks/_mob-menu.styl
@@ -1,7 +1,7 @@
 .mob-menu
   position fixed
-  bottom 100%
-  left 0
+  top 0
+  left 100%
   display flex
   flex-direction: column
   width 100%
@@ -10,7 +10,7 @@
   z-index: 20000
   padding 3rem 1.2rem
   transition: .5s
-  will-change: bottom
+  will-change: left
   &__top
     display flex
     justify-content: space-between
