--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -27,6 +27,7 @@ html
   border none
   border-radius 30px
   color white
+  box-shadow: 0 6px 20px RGBA(0,0,0,0.24);
   cursor pointer
   transition: .3s
   user-select none
