--- a/src/pug/blocks/_weare.pug
+++ b/src/pug/blocks/_weare.pug
@@ -6,8 +6,7 @@
         .weare__image
           img.weare__img(src='./images/weare-1.png')
         .weare__about
-          .weare__text <span>ООО «НЕФТЕГАЗБРОКЕР»</span> - ведущий трейдер на рынке нефтегазовых продуктов.
-          .weare__text Мы – команда профессионалов. С 2011 года наша компания прошла путь от идеи создания многопрофильного поставщика на сырьевых товарных рынках до одного из крупнейших трейдеров на рынке нефтепродуктов, газового конденсата, природного и сжиженного газа. За прошедший год мы поставили более 400 тысяч тонн нефтепродуктов и более 1 млрд. м3 природного газа по всем регионам РФ
+          .weare__text Мы – команда профессионалов. С 2011 года наша компания прошла путь от идеи создания многопрофильного поставщика на сырьевых товарных рынках до одного из крупнейших трейдеров на рынке нефтепродуктов, газового конденсата, природного и сжиженного газа. За прошедший год мы поставили более 400 тысяч тонн нефтепродуктов и более 1 млрд. м<sup>3</sup> природного газа по всем регионам РФ
       .weare__block
         .weare__about
           .weare__text Наша ключевая специализация - поставка нефтепродуктов с заводов группы Газпром. За время работы мы выстроили тесные взаимоотношения с большинством вертикально-интегрированных нефтяных компаний РФ, такими как Роснефть, Лукойл, ТатНефть и прочие.
