--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -22,7 +22,7 @@ html
   font-family: 'Open Sans'
   font-weight: 700
   font-size: 1.6rem
-  background-color: #60C3FE
+  background-color: #1387b6
   padding 2rem 4.5rem
   border none
   border-radius 30px
