--- a/src/stylus/blocks/_navigation.styl
+++ b/src/stylus/blocks/_navigation.styl
@@ -6,6 +6,7 @@
   z-index: 10000
   // background-color: black // DELETE
   padding-top 2.2rem
+  padding-bottom: 2px
   transition .5s
   &__wrapper
     display flex
