--- a/src/stylus/blocks/_products.styl
+++ b/src/stylus/blocks/_products.styl
@@ -44,6 +44,7 @@
     font-weight: 400
     font-size: 1.6rem
     line-height: 3rem
+    text-align: justify
 
 @media (max-width: 1024px)
   .products
