--- a/src/stylus/blocks/_weare.styl
+++ b/src/stylus/blocks/_weare.styl
@@ -35,6 +35,7 @@
     font-family: Open Sans
     color black
     font-weight: normal
+    text-align: justify
     line-height 3rem
     margin-bottom 1.8rem
     & span
