--- a/src/stylus/_fonts.styl
+++ b/src/stylus/_fonts.styl
@@ -1,29 +1,29 @@
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-Regular.ttf');
+  src: url('/fonts/osr.ttf');
   font-weight: normal
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-Bold.ttf');
+  src: url('/fonts/osb.ttf');
   font-weight: 700
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-Semibold.ttf');
+  src: url('/fonts/ossb.ttf');
   font-weight: 600
 }
 
 @font-face {
   font-family: 'Open Sans';
-  src: url('/fonts/OpenSans-ExtraBold.ttf');
+  src: url('/fonts/oseb.ttf');
   font-weight: 800
 }
 
 @font-face {
   font-family: 'Raleway';
-  src: url('/fonts/Raleway-ExtraBold.ttf');
+  src: url('/fonts/reb.ttf');
   font-weight: 800
 }
