add API and make slider

--- a/src/pug/blocks/_quotations.pug
+++ b/src/pug/blocks/_quotations.pug
@@ -5,13 +5,13 @@
       .quotations__title Котировки
       .quotations__buttons
         .quotations__button
-          .quotations__circle
+          .quotations__circle.left
             include ../../images/arrow-left.svg
         .quotations__button
-          .quotations__circle
+          .quotations__circle.right
             include ../../images/arrow-right.svg
     .quotations__blocks
-      .quotations__slider
+      .quotations__slider.swiper-wrapper
         .quotations__block
           span
             .quotations__label Регулятор-92
