--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -6,6 +6,8 @@ html(lang="ru")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="/css/style.css")
     link(rel="stylesheet", href="/vendor/tingle.css")
+    <link rel="stylesheet" href="/vendor/swiper.min.css">
+    <script src="/vendor/swiper.min.js"></script>
     title НГБ
   body
     #wrapper
