--- a/src/stylus/blocks/_quotations.styl
+++ b/src/stylus/blocks/_quotations.styl
@@ -46,6 +46,7 @@
     padding-top 1.3rem
     padding-bottom 1.3rem
     box-shadow: 0 8px 24px rgba(0,0,0,.08)
+    overflow hidden
   &__slider
     display flex
   &__block
