remove mobile border

--- a/src/stylus/blocks/_quotations.styl
+++ b/src/stylus/blocks/_quotations.styl
@@ -124,6 +124,7 @@
     &__blocks
       margin-top 2.6rem
     &__block
+      border none
       padding 3rem
     &__label
       font-size: 1.6rem
