--- a/src/pug/blocks/_header.pug
+++ b/src/pug/blocks/_header.pug
@@ -2,7 +2,9 @@ header.header
   video.header__video(src="/images/header-video.mp4" autoplay loop)
   .header__content
     .mobile__hamburger
-      img.mobile__hamb(src='/images/hamburger.png')
+      .mobile__text МЕНЮ
+      .mobile__icon
+        include ../../images/humburger.svg
     .header__title #[span.header__title_blue НГБ] - гарант стабильных поставок
     .header__text Ваш надежный поставщик нефтепродуктов и природного газа. <br /> Один из крупнейших брокеров в России
     .header__contact
