--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -8,6 +8,8 @@ html(lang="ru")
     link(rel="stylesheet", href="/vendor/tingle.css")
     <link rel="stylesheet" href="/vendor/swiper.min.css">
     <script src="/vendor/swiper.min.js"></script>
+    script(src="/vendor/inputmask.dependencyLib.min.js")
+    script(src="/vendor/inputmask.min.js")
     title НГБ
   body
     #wrapper
