--- a/src/stylus/_global.styl
+++ b/src/stylus/_global.styl
@@ -12,6 +12,9 @@ html
   width 100%
   overflow-x: hidden
 
+.tingle-modal-box
+  max-width: 80vw !important
+
 .g-wrapper
   max-width: 120rem
   margin 0 auto
