--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -10,6 +10,7 @@ html(lang="ru")
     <script src="/vendor/swiper.min.js"></script>
     script(src="/vendor/inputmask.dependencyLib.min.js")
     script(src="/vendor/inputmask.min.js")
+    <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,fetch,Promise"></script>
     title НГБ
   body
     #wrapper
