--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -27,6 +27,17 @@
     justify-content space-between
     align-items: flex-start
     margin-bottom 21rem
+  &__personal
+    display flex
+    justify-content: center
+    align-items: center
+    font-size: 1rem;
+    color: #d8d8d8;
+    font-family: Open Sans;
+    margin-bottom: 2rem;
+    text-align: left;
+    & a
+      color #1387b6
   &__grid
     &:nth-child(1)
       padding-top 5rem
@@ -35,7 +46,9 @@
   &__item
     margin-bottom 3.2rem
     &:nth-child(3)
-      margin-bottom 6rem
+      margin-bottom 1.6rem
+    &:nth-child(4)
+      margin-bottom 4rem
   &__input
     width 40rem
     background-color RGBA(23,33,39,1)
@@ -88,6 +101,28 @@
       color white
       text-align: right
       margin-bottom 1.6rem
+.confirm__box
+  width 16px
+  height: 16px
+  border-radius: 4px
+  margin-right: 2rem
+.confirm__label
+  width 16px
+  height: 16px
+  display: block
+  position: relative
+  margin-right 1rem
+.confirm__label input[type="checkbox"] + span
+  position absolute
+  left: -1px;
+  top: -7px;
+  width: 20px;
+  height: 20px;
+  cursor pointer
+  border-radius: 4px
+.confirm__label input[type="checkbox"]:checked + span
+  background url('../images/confirm.png') center center/cover no-repeat
+  background-size: cover
 
 @media (max-width: 1024px)
   .footer
@@ -109,7 +144,7 @@
       width 34rem
     &__item
       margin-bottom 2.4rem
-      &:nth-child(3)
+      &:nth-child(4)
         margin-bottom 4rem
     &__textarea
       font-size 1.4rem
@@ -144,7 +179,7 @@
       margin-bottom 1.4rem
     &__item
       margin-bottom 2.4rem
-      &:nth-child(3)
+      &:nth-child(4)
         margin-bottom 4rem
     &__grid
       margin-bottom 5.2rem
