--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -17,4 +17,5 @@ html(lang="ru")
       block content
     script(src="/vendor/tingle.min.js")
     script(src="/vendor/smooth-scroll.polyfills.min.js")
+    script(src="/vendor/alertify.min.js")
     script(src="/js/main.js")
