--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -7,7 +7,11 @@ html(lang="ru")
     link(rel="stylesheet", href="/css/style.css")
     link(rel="stylesheet", href="/vendor/tingle.css")
     <link rel="stylesheet" href="/vendor/swiper.min.css">
+    <link rel="stylesheet" href="/vendor/alertify.core.css">
+    <link rel="stylesheet" href="/vendor/alertify.default.css">
+    //<link rel="stylesheet" href="/vendor/alertify.bootstrap.css">
     <script src="/vendor/swiper.min.js"></script>
+    <script src="/vendor/alertify.min.js"></script>
     script(src="/vendor/inputmask.dependencyLib.min.js")
     script(src="/vendor/inputmask.min.js")
     <script src="https://cdn.polyfill.io/v2/polyfill.js?features=default,fetch,Promise"></script>
@@ -17,5 +21,4 @@ html(lang="ru")
       block content
     script(src="/vendor/tingle.min.js")
     script(src="/vendor/smooth-scroll.polyfills.min.js")
-    script(src="/vendor/alertify.min.js")
     script(src="/js/main.js")
