--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -18,6 +18,7 @@ html(lang="ru")
     //- <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
     <script src="/vendor/promise.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/classlist/2014.01.31/classList.min.js"></script>
     title НГБ
     script.
       if (!Array.from) {
