--- a/src/stylus/blocks/_products.styl
+++ b/src/stylus/blocks/_products.styl
@@ -15,6 +15,7 @@
     flex-shrink: 0
     & svg
       width 56.6rem
+      height 61.8rem
       & .circle
         cursor pointer
         opacity 0
