--- a/src/stylus/blocks/_howtowork.styl
+++ b/src/stylus/blocks/_howtowork.styl
@@ -15,7 +15,7 @@
     align-items: flex-start
     margin-bottom 12rem
   &__etaps
-    display flex
+    display block
     flex-direction: column
     align-items: flex-start
     justify-content: flex-start
