--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -77,6 +77,7 @@
     transition 0.3s
     resize: none;
     transition 0.3s
+    overflow: auto
     &:hover
       border-color: #60C3FE
     &:focus
