--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -22,6 +22,8 @@
     color white
   &__elem
     margin-bottom 2.4rem
+    &:nth-child(2)
+        margin-bottom 6rem
   &__content
     display flex
     justify-content space-between
@@ -102,6 +104,20 @@
       color white
       text-align: right
       margin-bottom 1.6rem
+  &__type
+    display flex
+    justify-content: flex-start
+    align-items: center
+    margin-bottom 2rem
+    & img
+      width 20px
+      height: 20px
+      margin-right 1.4rem
+  &__contact
+    font-size: 1.6rem
+    font-family: Open Sans
+    font-weight normal
+    color white
 .confirm__box
   width 16px
   height: 16px
@@ -134,6 +150,8 @@
     &__subtitle
       font-size 1.4rem
       margin-bottom 0.4rem
+    &__contact
+      font-size 1.2rem
     &__text
       font-size: 2rem
     &__field
@@ -158,6 +176,8 @@
       font-size 1.2rem
     &__elem
       margin-bottom 2rem
+      &:nth-child(2)
+        margin-bottom 4rem
 
 @media (max-width: 566px)
   .footer
