--- a/src/pug/blocks/_footer.pug
+++ b/src/pug/blocks/_footer.pug
@@ -32,10 +32,10 @@ footer.footer#footer
             textarea.footer__textarea(type="text" name="user-text" placeholder="Что вас интересует?")
           .footer__item.footer__personal
             label.confirm__label
-              input(type="checkbox" value="1" name="k")
+              input(type="checkbox")
               span
             p Я принимаю <a id="politics">соглашение сайта</a> об обработке персональных данных
-          button.button.footer__submit Отправить
+          button.button.footer__submit(type="submit") Отправить
   .g-wrapper
     .footer__conf
       .footer__pol Политика конфиденциальности
