add yakor for contacts block

--- a/src/pug/blocks/_mob-menu.pug
+++ b/src/pug/blocks/_mob-menu.pug
@@ -9,3 +9,4 @@
     a.mob-menu__item(href="#howtowork") Как это работает
     a.mob-menu__item(href="#geography") География
     a.mob-menu__item(href="#documents") Документы
+    a.mob-menu__item(href="#footer") Контакты
