--- a/src/pug/blocks/_navigation.pug
+++ b/src/pug/blocks/_navigation.pug
@@ -8,6 +8,7 @@
       a.menu__link(href="#howtowork") Как это работает
       a.menu__link(href="#geography") География
       a.menu__link(href="#documents") Документы
+      a.menu__link(href="#footer") Контакты
     .navigation__callback
       button.button.button_mini.callback Оставить заявку
 
