--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -41,6 +41,7 @@
     text-align: left;
     & a
       color #1387b6
+      cursor pointer
     & p
       font-size 1.4rem
   &__grid
@@ -102,11 +103,15 @@
     font-size: 1.6rem
     font-family: Open Sans
     color #909090
+    cursor pointer
+    transition 0.3s
     &_bold
       font-weight: 600
       color white
       text-align: right
       margin-bottom 1.6rem
+    &:hover
+      color white
   &__type
     display flex
     justify-content: flex-start
@@ -222,8 +227,10 @@
     &__pol
       text-align: center
       margin-bottom 2rem
+
       &_bold
         margin-bottom 1rem
+
 
 @media (max-width: 418px)
   .footer__field
