--- a/src/stylus/blocks/_footer.styl
+++ b/src/stylus/blocks/_footer.styl
@@ -9,6 +9,13 @@
     font-size 4.6rem
     color white
     margin-bottom 7rem
+  &__titlecontacts
+    text-align: left
+    font-family: Raleway
+    font-weight 800
+    font-size 4.6rem
+    color white
+    margin-bottom 4rem
   &__subtitle
     font-size: 1.8rem
     font-family: Open Sans
@@ -19,7 +26,7 @@
     font-size: 3rem
     font-family: Open Sans
     font-weight 700
-    color white
+    color #1387b6
   &__elem
     margin-bottom 2.4rem
     &:nth-child(2)
@@ -114,7 +121,7 @@
       height: 20px
       margin-right 1.4rem
   &__contact
-    font-size: 1.6rem
+    font-size: 2rem
     font-family: Open Sans
     font-weight normal
     color white
@@ -147,6 +154,8 @@
     &__title
       font-size 3rem
       margin-bottom 3.2rem
+    &__titlecontacts
+      font-size: 3rem
     &__subtitle
       font-size 1.4rem
       margin-bottom 0.4rem
@@ -185,6 +194,8 @@
     &__title
       font-size 2.4rem
       margin-bottom 3rem
+    &__titlecontacts
+      font-size: 2.4rem
     &__subtitle
       font-size 1.2rem
     &__text
