--- a/src/pug/blocks/_footer.pug
+++ b/src/pug/blocks/_footer.pug
@@ -10,6 +10,7 @@ footer.footer#footer
           .footer__subtitle Благодаря этом Мы заслужили:
           .footer__text Репутацию надежного партнера
         .footer__elem
+          .footer__titlecontacts Контакты
           .footer__type
             img.footer__svg(src="./images/phone-icon.svg")
             a(href="tel:+749999999").footer__contact +7 (499) 999-99-99
