--- a/src/pug/blocks/_footer.pug
+++ b/src/pug/blocks/_footer.pug
@@ -7,7 +7,7 @@ footer.footer#footer
           .footer__subtitle К каждому делу мы подходим индивидуально:
           .footer__text С высокой степенью<br>ответственности и вниманием
         .footer__elem
-          .footer__subtitle Благодаря этом Мы заслужили:
+          .footer__subtitle Благодаря этому Мы заслужили:
           .footer__text Репутацию надежного партнера
         .footer__elem
           .footer__titlecontacts Контакты
@@ -16,10 +16,10 @@ footer.footer#footer
             a(href="tel:+749999999").footer__contact +7 (499) 999-99-99
           .footer__type
             img.footer__svg(src="./images/mail.svg")
-            a(href="mailto:").footer__contact test@mail
+            a(href="mailto:").footer__contact neftegazbroker@neftegazbroker.ru
           .footer__type
             img.footer__svg(src="./images/pin.svg")
-            .footer__contact Адрес
+            .footer__contact 117105, г. Москва, Варшавское Шоссе, д. 1, стр. 1-2, <br />офис В117, БЦ W-PLAZA
       .footer__grid
         form.footer__form
           .footer__item
@@ -39,7 +39,7 @@ footer.footer#footer
           button.button.footer__submit(type="submit") Отправить
   .g-wrapper
     .footer__conf
-      .footer__pol Политика конфиденциальности
+      .footer__pol <a id="politics">Политика конфиденциальности</a>
       .footer__element
         .footer__pol.footer__pol_bold Сайт разработан
         img(src="./images/spacecode.svg").footer__spacecode
