safari and modal form conf

--- a/src/stylus/blocks/_header.styl
+++ b/src/stylus/blocks/_header.styl
@@ -47,9 +47,15 @@
     font-weight: 700
     color white
     margin-right 7.5rem
+  &__safari
+    width 100%
+    height 70rem
+    object-fit cover
 
 @media (max-width: 1024px)
   .header
+    &__safari
+      height 46.4rem
     &__video
       height 46.4rem
     &__title
@@ -70,6 +76,8 @@
 @media (max-width: 566px)
   .header
     height: 47.6rem
+    &__safari
+      height: 47.6rem
     &__phoneblock
       display flex
       align-items: center
