--- a/src/pug/layouts/_main.pug
+++ b/src/pug/layouts/_main.pug
@@ -9,6 +9,7 @@ html(lang="ru")
     <link rel="stylesheet" href="/vendor/swiper.min.css">
     <link rel="stylesheet" href="/vendor/alertify.core.css">
     <link rel="stylesheet" href="/vendor/alertify.default.css">
+    script(src="/vendor/is.min.js")
     <script src="/vendor/swiper.min.js"></script>
     <script src="/vendor/alertify.min.js"></script>
     script(src="/vendor/inputmask.dependencyLib.min.js")
