--- a/src/stylus/blocks/_callback.styl
+++ b/src/stylus/blocks/_callback.styl
@@ -25,8 +25,8 @@
     margin-bottom 3.2rem
   &__item
     margin-bottom 3.2rem
-    &:nth-child(2)
-      margin-bottom 4rem
+    &:nth-child(3)
+      margin-bottom 3.6rem
   &__form
     text-align: center
   &__field
@@ -70,8 +70,8 @@
       width 339px
     &__item
       margin-bottom 2.6rem
-      &:nth-child(2)
-        margin-bottom 4.4rem
+      &:nth-child(3)
+        margin-bottom 3.4rem
 @media (max-width: 719px)
   .call
     padding 5rem 0 6rem 0
@@ -89,7 +89,8 @@
       padding 0.8rem 3rem 0.8rem 3rem
     &__item
       margin-bottom 2.6rem
-      &:nth-child(2)
-        margin-bottom 3.8rem
+      width 28.8rem
+      &:nth-child(3)
+        margin-bottom 2.8rem
 
 
